just payout left to do

--- a/app/views/month-end/bacs-payments.html
+++ b/app/views/month-end/bacs-payments.html
@@ -23,7 +23,7 @@
                     {{ mojAlert({
                         variant: "success",
                         dismissible: false,
-                        html: 'Success message'
+                        html: 'Report in progress.'
                     }) }}
                 {% else %}
                 {% endif %}
@@ -45,8 +45,7 @@
                 {{ govukButton({
                     text: "Create report",
                     classes: "",
-                    href: "#",
-                    dataMessage: 'Hello'
+                    href: "#"
                 }) }}
                 {% else %}
                 {{ govukButton({
