--- a/app/views/month-end/dishonoured-cheques.html
+++ b/app/views/month-end/dishonoured-cheques.html
@@ -23,7 +23,7 @@
                     {{ mojAlert({
                         variant: "success",
                         dismissible: false,
-                        html: 'Report created'
+                        html: 'Report in progress.'
                     }) }}
                 {% else %}
                 {% endif %}
@@ -78,7 +78,7 @@
                     <td class="govuk-table__cell">Dishonoured cheques report</td>
                     <td class="govuk-table__cell">{{data['businessUnit']}}</td>
                     <td class="govuk-table__cell">jane.smith</td>
-                    <td class="govuk-table__cell">Ready</td>
+                    <td class="govuk-table__cell">No records</td>
                     <td class="govuk-table__cell download"><a class="govuk-link govuk-link--no-visited-state" href="#">Download</a></td>
                 </tr>
                 </tbody>
