--- a/app/views/month-end/suspense.html
+++ b/app/views/month-end/suspense.html
@@ -26,7 +26,7 @@
                     {{ mojAlert({
                         variant: "success",
                         dismissible: false,
-                        html: 'Report created'
+                        html: 'Report in progress.'
                     }) }}
                 {% else %}
                 {% endif %}
